--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.4 
	- Fixed flash player not working if playlist_method included clear
	- Fixed album art thumbs never saving due to incorrect table reference
	- Fixed download having no filename if no catalog pattern
	- Fixed issue where 0 sized images could be inserted into the database
		artifically inflating its size
	- Added Playlist and Genre Counts to the XMLAPI Handshake
	- Added ability to Add Search Results to playlist, or download
		if batch download is enabled
	- Fixed Remove one vote, removes all votes on democratic play
	- Fixed sorting issue on Browse Users

--------------------------------------------------------------------------
  v.3.4-Beta3 04/20/2008 
	- Fixed Rating display and Rating Advanced Search
	- Added ability to specify new Genre when adding a Radio Station
	- Fixed Recently Played to do Distinct over last X rather then
		distinct over all time
	- Added update the attempts to correct the charset on the db
		columns
	- Added prompt for input charset to fix_filenames.inc
	- Updated Links in Readme
	- Fixed Show Art filter on browse by albums
	- Added Ratings links to Browse Albums and Browse Artist
	- Fixed seeking on random track, giving you a new track every	
		seek 
	- Added additional error reporting if localplay access / config
		fails
	- Give Admins Full Localplay Regardless
	- Fixed incorrect reference to ellipsis thresholds 
	- Fixed page point not being remembered by the back button
	- Fixed naming restrictions on database name during install
	- Fixed issue where verify updated all songs in the catalog even
		if there was no change
	- Fixed recently played, only shows distinct songs