@@ -1,6 +1,6 @@
 //
 //
-// Copyright (c) 2001 - 2008 Ampache.org
+// Copyright (c) Ampache.org
 // All rights reserved.
 //
 // This program is free software; you can redistribute it and/or
@@ -47,6 +47,18 @@ function selectField(element) {
 // function for the catalog mojo fluf
 function update_txt(value,field) { 
 	document.getElementById(field).innerHTML=value;
+}
+
+// Function for enabling/disabling a div (display:none) used for loading div
+function toggle_visible(element) { 
+
+	var obj = document.getElementById(element);
+	if (obj.style.display == 'block') { 
+		obj.style.display = 'none';
+	}
+	else { 
+		obj.style.display = 'block'; 
+	} 
 }
 
 ///
