@@ -4,6 +4,9 @@
 
 --------------------------------------------------------------------------
   v.3.4 
+	- Relaxed Charset restrictions on catalog add filename with invalid
+		characters is now a warning, not a fatal error
+	- Fixed lack of loading indication during catalog processes
 	- Fixed flash player not working if playlist_method included clear
 	- Fixed album art thumbs never saving due to incorrect table reference
 	- Fixed download having no filename if no catalog pattern
